[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lytecache"
version = "0.2.0"
description = "Redis-like caching with zero infrastructure -- an embedded, SQLite-backed cache."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "lytecache contributors" },
]
keywords = ["cache", "sqlite", "redis", "embedded", "ttl", "key-value"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
    "ruff>=0.5",
    "mypy>=1.8",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/lytecache/lytecache"
Documentation = "https://lytecache.github.io/lytecache"
Changelog = "https://github.com/lytecache/lytecache/blob/main/CHANGELOG.md"
Issues = "https://github.com/lytecache/lytecache/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lytecache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP007"]

[tool.mypy]
# NOTE: this only sets mypy's own type-checking target (the installed mypy no
# longer supports checking against 3.9 semantics); the package itself still
# declares requires-python = ">=3.9" and uses `from __future__ import
# annotations` throughout so it remains runtime-compatible with 3.9.
python_version = "3.10"
strict = true
warn_unused_ignores = true
show_error_codes = true
packages = ["lytecache"]
mypy_path = "src"
